org_unpackaged/unpackaged/objects/Enrollment_Code__c.object
<CustomObject>
    <description>Used to house the different enrollment codes MBO will use to enroll associates</description>
    <fields>
        <fullName>Background_Check_Drug_Screen_Required__c</fullName>
        <label>Background Check/Drug Screen Required</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_On_Boarding_Docs_Required__c</fullName>
        <label>Client On-Boarding Docs Required</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_dsc__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_mBORecordId__c</fullName>
        <externalId>true</externalId>
        <label>MBO Record Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rs_company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollment Codes</relationshipLabel>
        <relationshipName>Enrollment_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrollment Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enrollment Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>syncUpdate_Company</fullName>
        <active>true</active>
        <description>Restricts updates to fields manged by the MBO System</description>
        <errorConditionFormula>AND(
          NOT($User.Id=&apos;00580000003Xfjx&apos;),
          NOT(
                    ISBLANK( fs_mBORecordId__c )
          ),
          ISCHANGED(rs_company__c)
)</errorConditionFormula>
        <errorDisplayField>rs_company__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_Description</fullName>
        <active>true</active>
        <description>Restricts updates to fields manged by the MBO System</description>
        <errorConditionFormula>AND(
          NOT($User.Id=&apos;00580000003Xfjx&apos;),
          NOT(
                    ISBLANK( fs_mBORecordId__c )
          ),
          ISCHANGED(fs_dsc__c)
)</errorConditionFormula>
        <errorDisplayField>fs_dsc__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_Name</fullName>
        <active>true</active>
        <description>Restricts updates to fields manged by the MBO System</description>
        <errorConditionFormula>AND(
          NOT($User.Id=&apos;00580000003Xfjx&apos;),
          NOT(
                    ISBLANK( fs_mBORecordId__c )
          ),
          ISCHANGED(Name)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_mboRecordId</fullName>
        <active>true</active>
        <description>Restricts updates to fields manged by the MBO System</description>
        <errorConditionFormula>AND(
          NOT($User.Id=&apos;00580000003Xfjx&apos;),
          ISCHANGED( fs_mBORecordId__c )
)</errorConditionFormula>
        <errorDisplayField>fs_mBORecordId__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_owner</fullName>
        <active>true</active>
        <description>Restricts updates to fields manged by the MBO System</description>
        <errorConditionFormula>AND(
          NOT($User.Id=&apos;00580000003Xfjx&apos;),
          NOT(
                    ISBLANK( fs_mBORecordId__c )
          ),
          ISCHANGED(OwnerId)
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
</CustomObject>